[gd_scene load_steps=11 format=2]

[ext_resource path="res://Elements/ElectricFieldBlaster/ElectricFieldBlaster.gd" type="Script" id=1]
[ext_resource path="res://Art/temp/ElectricFieldBlaster2.png" type="Texture" id=2]
[ext_resource path="res://Art/temp/ElectricFieldBlasterTarget.png" type="Texture" id=3]
[ext_resource path="res://Art/temp/ElectricFieldBlaster1.png" type="Texture" id=4]
[ext_resource path="res://Elements/Blocks/StaticBody.gd" type="Script" id=5]
[ext_resource path="res://Art/temp/ElectricArea.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 40.0

[sub_resource type="CircleShape2D" id=3]
radius = 40.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 0, 10 )

[node name="ElectricFieldBlaster" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "1"

[node name="TargetPosition" type="Sprite" parent="."]
visible = false
position = Vector2( 100, 100 )
texture = ExtResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 2 )

[node name="ClickArea" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource( 3 )

[node name="DetectingArea" type="Area2D" parent="."]
input_pickable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectingArea"]
shape = SubResource( 4 )

[node name="EffectTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ColdTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ElectricFieldArea" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.219608 )
texture = ExtResource( 6 )

[connection signal="mouse_entered" from="ClickArea" to="." method="_on_ClickArea_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_ClickArea_mouse_exited"]
[connection signal="body_entered" from="DetectingArea" to="." method="_on_DetectingArea_body_entered"]
[connection signal="body_exited" from="DetectingArea" to="." method="_on_DetectingArea_body_exited"]
[connection signal="timeout" from="EffectTimer" to="." method="_on_EffectTimer_timeout"]
